--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,3 +1,19 @@
 <app-lobby></app-lobby>
 <app-lobby-button></app-lobby-button>
 
+<!-- Info Alert -->
+<div hlmAlert>
+  <ng-icon hlm hlmAlertIcon name="lucideBox" />
+  <h4 hlmAlertTitle>Introducing spartan/ui!</h4>
+  <p hlmAlertDesc>
+    spartan/ui is made up of unstyled UI providers, the spartan/ui/brain.<br />
+    On top we add spartan/ui/helm(et) with shadcn-like styles.
+  </p>
+</div>
+
+<!-- Destructive Alert -->
+<div hlmAlert variant="destructive">
+  <ng-icon hlm hlmAlertIcon name="lucideTriangleAlert" />
+  <h4 hlmAlertTitle>Unexpected Error</h4>
+  <p hlmAlertDesc>Your session has expired. Please log in again.</p>
+</div>
