--- a/src/app/shared/components/avatar/avatar.component.html
+++ b/src/app/shared/components/avatar/avatar.component.html
@@ -82,7 +82,7 @@
 
     <button hlmMenuItem>
       <ng-icon hlm name="lucideLogOut" hlmMenuIcon />
-      <span>Login</span>
+      <span (click)="loginUser()">Login</span>
       <hlm-menu-shortcut>⇧⌘L</hlm-menu-shortcut>
     </button>
 
@@ -90,7 +90,7 @@
 
     <button hlmMenuItem>
       <ng-icon hlm name="lucideLogOut" hlmMenuIcon />
-      <span>Logout</span>
+      <span (click)="logoutUser()">Logout</span>
       <hlm-menu-shortcut>⇧⌘Q</hlm-menu-shortcut>
     </button>
   </hlm-menu>
@@ -114,4 +114,3 @@
     </button>
   </hlm-sub-menu>
 </ng-template>
-
