Done: display of lobbies

--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,6 @@
 <app-header></app-header>
-<div class="home-wrapper bg-zinc-50 flex w-full min-h-screen">
-  <app-lobby></app-lobby>
+<div class="home-wrapper bg-zinc-50 flex flex-col w-full min-h-screen items-center">
+  <app-lobby class="w-full max-w-2xl"></app-lobby> <div class="mt-4">
   <app-lobby-button></app-lobby-button>
-
-  <br>
-  <button hlmBtn (click)="showToast()">Show Toast</button>
+</div>
 </div>
