--- a/src/app/features/lobby/lobby.component.html
+++ b/src/app/features/lobby/lobby.component.html
@@ -1,2 +1,15 @@
-<div hlmBadge variant='destructive'>lobby component</div>
-<br>
+<hlm-table class="w-full min-w-[400px]">
+  <hlm-caption>Available Lobbies</hlm-caption>
+  <hlm-trow>
+    <hlm-th class="w-52">Name</hlm-th>
+    <hlm-th class="w-60">Status</hlm-th>
+    <hlm-th class="flex-1">Players</hlm-th>
+    <hlm-th class="justify-end w-40">Type</hlm-th>
+  </hlm-trow>
+
+  @for (lobby of lobbies(); track lobby.id) {
+    <hlm-trow>
+      <hlm-td class="w-52">{{ lobby.name }}</hlm-td>
+    </hlm-trow>
+  }
+</hlm-table>
