--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -2,5 +2,7 @@
 <div class="home-wrapper bg-zinc-50 flex flex-col w-full min-h-screen items-center">
   <app-lobby class="w-full max-w-2xl"></app-lobby> <div class="mt-4">
   <app-lobby-button></app-lobby-button>
+  <hlm-toaster />
+
 </div>
 </div>
