--- a/src/app/features/home/home.component.html
+++ b/src/app/features/home/home.component.html
@@ -1,8 +1,38 @@
 <app-header></app-header>
 <div class="home-wrapper bg-zinc-50 flex flex-col w-full min-h-screen items-center">
-  <app-lobby class="w-full max-w-2xl"></app-lobby> <div class="mt-4">
-  <app-lobby-button></app-lobby-button>
-  <hlm-toaster />
+  <app-lobby class="w-full max-w-2xl"></app-lobby>
+  <div class="mt-4">
+    <div class="gap-2.5 flex flex-col">
+      <div class="flex flex-col items-center">
 
+        <hlm-dialog>
+          <button hlmBtn brnDialogTrigger variant='outline'>Create Lobby</button>
+          <hlm-dialog-content class="sm:max-w-[425px]" *brnDialogContent="let ctx">
+            <hlm-dialog-header>
+              <h3 hlmDialogTitle>Create Lobby</h3>
+              <p hlmDialogDescription>Enter a name for your lobby and the amount for the bet.
+                Click save when you're done.</p>
+            </hlm-dialog-header>
+            <div class="py-4 grid gap-4">
+              <div class="items-center grid grid-cols-4 gap-4">
+                <label hlmLabel for="lobbyNameInput" class="text-right">Name</label>
+                <input hlmInput id="lobbyNameInput" class="col-span-3" [(ngModel)]="lobbyName" />
+              </div>
+              <div class="items-center grid grid-cols-4 gap-4">
+                <label hlmLabel for="amountInput" class="text-right">Amount</label>
+                <input hlmInput id="amountInput" type="number" class="col-span-3" [(ngModel)]="amount" />
+              </div>
+            </div>
+            <hlm-dialog-footer>
+              <button hlmBtn type="submit" (click)="createLobbyAndCloseDialog(ctx)">Save changes</button>
+            </hlm-dialog-footer>
+          </hlm-dialog-content>
+        </hlm-dialog>
+      </div>
+      <app-lobby-button></app-lobby-button>
+    </div>
+    <hlm-toaster />
+  </div>
 </div>
-</div>
+
+
