--- a/src/app/features/avatar/avatar.component.html
+++ b/src/app/features/avatar/avatar.component.html
@@ -38,7 +38,7 @@
     <hlm-menu-separator/>
     <hlm-menu-group>
       <ng-container *ngIf="isLoggedIn()">
-        <button hlmMenuItem (click)="navigateToNotImplemented()">
+        <button hlmMenuItem (click)="navigateToProfile()">
           <ng-icon hlm name="lucideUser" hlmMenuIcon/>
           <span>Profile</span>
           <hlm-menu-shortcut>⇧⌘P</hlm-menu-shortcut>
