--- a/src/app/features/not-implemented-yet/not-implemented-yet.component.html
+++ b/src/app/features/not-implemented-yet/not-implemented-yet.component.html
@@ -2,7 +2,7 @@
   <div hlmAlert variant="destructive" class="max-w-md w-full mb-4">
     <ng-icon hlm hlmAlertIcon name="lucideTriangleAlert" />
     <h4 hlmAlertTitle>Expected Error</h4>
-    <p hlmAlertDesc>This is now implemented yet</p>
+    <p hlmAlertDesc>This feature will be implemented soon.</p>
   </div>
   <button hlmBtn variant='outline' (click)="goHome()">Go Home</button>
 </div>
