--- a/src/app/features/lobby/lobby.component.html
+++ b/src/app/features/lobby/lobby.component.html
@@ -24,10 +24,13 @@
         <hlm-td class="justify-end w-40">{{ lobby.amount }}</hlm-td>
 
         <hlm-td class="justify-end w-40">
-          <button (click)="connectToLobby(lobby.id)" hlmBtn size="icon" variant="outline"><ng-icon hlm size='sm' name="lucideChevronRight" /></button>
+          <button (click)="redirectOrConnect(lobby.id)" hlmBtn size="icon" variant="outline"><ng-icon hlm size='sm' name="lucideChevronRight" /></button>
         </hlm-td>
 
       </hlm-trow>
     }
   </hlm-table>
 </div>
+
+<hlm-toaster />
+
