--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -7,7 +7,7 @@
 
     <div class="text-center sm:text-left flex-grow">
       @if (userProfile(); as user) {
-        <h1 class="text-2xl font-bold text-white mb-0.5 sm:text-3xl">{{ user.loginName }}</h1> <p class="text-gray-400 text-sm sm:text-base">Member since: 2023</p> }
+        <h1 class="text-2xl font-bold text-white mb-0.5 sm:text-3xl">{{ user.loginName }}</h1> <p class="text-gray-400 text-sm sm:text-base">Member since: 2025</p> }
     </div>
   </div>
 
@@ -69,7 +69,7 @@
             <p class="font-medium text-gray-300 text-sm">Current Lobby ID:</p> <p class="text-white text-base">{{ userProfile()!.lobbyId }}</p> </div>
         }
           <div>
-            <p class="font-medium text-gray-300 text-sm">Bio:</p> <p class="text-white text-base">A dedicated player of Counter-Strike 2, always striving for victory.</p> </div>
+            <p class="font-medium text-gray-300 text-sm">Bio:</p> <p class="text-white text-base">A dedicated player of Counter-Strike 2.</p> </div>
           <div class="mt-4"> <p class="font-medium text-gray-300 mb-0.5 text-sm">Social Links:</p> <div class="flex space-x-2"> <a href="#" class="text-gray-400 hover:text-blue-500 transition duration-300">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.35c0 .732.593 1.325 1.325 1.325h21.35c.732 0 1.325-.593 1.325-1.325v-21.35c0-.732-.593-1.325-1.325-1.325zm-4.025 18.025h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05z"/></svg>
           </a>
@@ -88,3 +88,5 @@
     </div>
   </div>
 </div>
+
+<hlm-toaster />
