--- a/src/app/features/profile/profile.component.html
+++ b/src/app/features/profile/profile.component.html
@@ -70,10 +70,10 @@
         }
           <div>
             <p class="font-medium text-gray-300 text-sm">Bio:</p> <p class="text-white text-base">A dedicated player of Counter-Strike 2.</p> </div>
-          <div class="mt-4"> <p class="font-medium text-gray-300 mb-0.5 text-sm">Social Links:</p> <div class="flex space-x-2"> <a href="#" class="text-gray-400 hover:text-blue-500 transition duration-300">
+          <div class="mt-4"> <p class="font-medium text-gray-300 mb-0.5 text-sm">Social Links:</p> <div class="flex space-x-2"> <a href="https://steamcommunity.com/id/nodempr/" class="text-gray-400 hover:text-blue-500 transition duration-300">
             <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24"><path d="M22.675 0h-21.35c-.732 0-1.325.593-1.325 1.325v21.35c0 .732.593 1.325 1.325 1.325h21.35c.732 0 1.325-.593 1.325-1.325v-21.35c0-.732-.593-1.325-1.325-1.325zm-4.025 18.025h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05z"/></svg>
           </a>
-            <a href="#" class="text-gray-400 hover:text-purple-500 transition duration-300">
+            <a href="https://steamcommunity.com/id/nodempr/" class="text-gray-400 hover:text-purple-500 transition duration-300">
               <svg xmlns="http://www.w3.org/2000/svg" class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24"><path d="M19.118 0H4.882C2.185 0 0 2.185 0 4.882v14.236C0 21.815 2.185 24 4.882 24h14.236C21.815 24 24 21.815 24 19.118V4.882C24 2.185 21.815 0 19.118 0zM18.025 16.275h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05zm-6.05 0h-2.45v-5.05c0-1.2.6-1.8 1.5-1.8s1.5.6 1.5 1.8v5.05z"/></svg>
             </a>
           </div>
